# FEM

./: .gitignore  README.md  setup.cfg
src/FEM_mbbatukan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/truss_solver/: FEM.py
test2/: main.py
test2/example/RESULTS/: nodal_forces.txt
tests/: main.py
tests/RESULTS/: nodal_forces.txt
tests/test2/: main.py
tests/test2/example/: input_data.xlsx
tests/test2/example/RESULTS/: node_displacements.txt
truss_solver/: main.py  truss_solver.py
truss_solver/RESULTS/: node_displacements.txt
truss_solver/example/: input_data.xlsx
