[metadata]
name = FEM_mbbatukan	
version = 0.0.1
author = Mehmet Baris Batukan
author_email = N/A@email.com
description = Finite Element Method Test Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbbatukan/FEM
project_urls =
    Bug Tracker = https://github.com/mbbatukan/FEM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
